Use the new markProblemRegion APIs